<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp_serverRequest">
        <item android:id="@+id/btn_retrieveLatestData"
            android:icon="@drawable/vector_sync_black"
            android:title="@string/btn_recentData"/>
    </group>
    
    <group android:id="@+id/grp_localStats">
        <item android:id="@+id/lbl_stayPointCount"
            android:icon="@drawable/stay_point_black"
            android:title="@string/lbl_stayPointCount"/>

        <item android:id="@+id/lbl_stayPointVisitCount"
            android:icon="@drawable/stay_visit_black"
            android:title="@string/lbl_stayPointVisitCount"/>

        <item android:id="@+id/lbl_journeyCount"
            android:icon="@drawable/vector_timeline_active"
            android:title="@string/lbl_journeyCount"/>

        <item android:id="@+id/lbl_GPSPointCount"
            android:icon="@drawable/gps_point_black"
            android:title="@string/lbl_GPSPointCount"/>
    </group>

    <group>
        <item android:id="@+id/lbl_slowSpeed"
            android:icon="@drawable/vector_speed_slow"
            android:title="@string/lbl_slowSpeed"/>

        <item android:id="@+id/lbl_mediumSpeed"
            android:icon="@drawable/vector_speed_medium"
            android:title="@string/lbl_mediumSpeed"/>

        <item android:id="@+id/lbl_highSpeed"
            android:icon="@drawable/vector_speed_high"
            android:title="@string/lbl_highSpeed"/>
    </group>

    <group>
        <item android:id="@+id/btn_loggerStatus"
            android:icon="@drawable/logger_summary_history_black"
            android:title="@string/btn_loggerStatus"/>
    </group>
</menu>
