<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dissertation.GPSCompanionApp.activities.Settings">

    <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppBarOverlay" />

    <Button android:id="@+id/btn_clear_data"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_clear_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/my_toolbar" />

      <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_clear_data">

        <RelativeLayout  android:id="@+id/staySummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View android:id="@+id/StayDummyView"
                android:background="@color/black"
                android:layout_width="0.1dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <TextView android:id="@+id/lbl_deviceDBSize"
                android:text="@string/lbl_deviceDBSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBSizeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBPointCount"
                android:text="@string/lbl_deviceDBPointCount"
                android:layout_below="@id/lbl_deviceDBSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBPointCountValue"
                android:layout_below="@id/lbl_deviceDBSizeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBStayCount"
                android:text="@string/lbl_deviceDBStayCount"
                android:layout_below="@id/lbl_deviceDBPointCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBStayCountValue"
                android:layout_below="@id/lbl_deviceDBPointCountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBVisitCount"
                android:text="@string/lbl_deviceDBVisitCount"
                android:layout_below="@id/lbl_deviceDBStayCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBVisitCountValue"
                android:layout_below="@id/lbl_deviceDBStayCountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBJourneyCount"
                android:text="@string/lbl_deviceDBJourneyCount"
                android:layout_below="@id/lbl_deviceDBVisitCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBJourneyCountValue"
                android:layout_below="@id/lbl_deviceDBVisitCountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBLatest"
                android:text="@string/lbl_deviceDBLatest"
                android:layout_below="@id/lbl_deviceDBJourneyCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBLatestValue"
                android:text="@string/lbl_defaultValue"
                android:layout_below="@id/lbl_deviceDBJourneyCountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBOldest"
                android:text="@string/lbl_deviceDBOldest"
                android:layout_below="@id/lbl_deviceDBLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBOldestValue"
                android:text="@string/lbl_defaultValue"
                android:layout_below="@id/lbl_deviceDBLatestValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>


            <TextView android:id="@+id/lbl_deviceDBStayUpdate"
                android:text="@string/lbl_deviceDBStayUpdate"
                android:layout_below="@id/lbl_deviceDBOldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBStayUpdateValue"
                android:text="@string/lbl_defaultValue"
                android:layout_below="@id/lbl_deviceDBOldestValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <TextView android:id="@+id/lbl_deviceDBJourneyUpdate"
                android:text="@string/lbl_deviceDBJourneyUpdate"
                android:layout_below="@id/lbl_deviceDBStayUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/StayDummyView" style="@style/Label"/>
            <TextView android:id="@+id/lbl_deviceDBJourneyUpdateValue"
                android:text="@string/lbl_defaultValue"
                android:layout_below="@id/lbl_deviceDBStayUpdateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/StayDummyView" style="@style/LabelValue"/>

            <Button android:id="@+id/btn_viewEditDeviceSettings"
                android:text="@string/btn_viewEditDeviceSettings"
                android:layout_below="@id/lbl_deviceDBJourneyUpdateValue"
                android:layout_toRightOf="@id/StayDummyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button android:id="@+id/btn_retrieveSummary"
                android:text="@string/btn_retrieveSummary"
                android:layout_toLeftOf="@id/StayDummyView"
                android:layout_below="@id/lbl_deviceDBJourneyUpdateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
