<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <View android:id="@+id/settingsDummyView"
        android:layout_centerHorizontal="true"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"/>

    <TextView android:id="@+id/lbl_stayLength"
        android:text="@string/lbl_stayLength"
        android:layout_alignBaseline="@+id/spn_stayLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/settingsDummyView" style="@style/Label"/>
    <Spinner android:id="@+id/spn_stayLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/settingsDummyView" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_stayRadius"
        android:text="@string/lbl_stayRadius"
        android:layout_alignBaseline="@+id/spn_stayRadius"
        android:layout_below="@id/lbl_stayLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/settingsDummyView" style="@style/Label"/>
    <Spinner android:id="@+id/spn_stayRadius"
        android:layout_below="@id/spn_stayLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/settingsDummyView" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_journeyComp"
        android:text="@string/lbl_journeyComp"
        android:layout_below="@id/lbl_stayRadius"
        android:layout_alignBaseline="@+id/spn_journeyComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/settingsDummyView" style="@style/Label"/>
    <Spinner android:id="@+id/spn_journeyComp"
        android:layout_below="@id/spn_stayRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/settingsDummyView" style="@style/LabelValue"/>

    <Button android:id="@+id/btn_updateSettings"
        android:text="@string/btn_updateSettings"
        android:layout_width="match_parent"
        android:layout_toRightOf="@id/settingsDummyView"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"/>

    <Button android:id="@+id/btn_closeSettingsDialog"
        android:text="@string/btn_closeDialog"
        android:layout_width="match_parent"
        android:layout_toLeftOf="@id/settingsDummyView"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</RelativeLayout>