<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View android:id="@+id/dummyView"
        android:background="@color/transparent"
        android:layout_width="0.1dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

    <TextView android:id="@+id/lbl_startDateTime"
        android:text="Start: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
    <TextView android:id="@+id/lbl_startDateTimeValue"
        android:layout_toRightOf="@id/dummyView"
        android:layout_alignBaseline="@id/lbl_startDateTime"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_endDateTime"
        android:layout_below="@id/lbl_startDateTime"
        android:text="End: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
    <TextView android:id="@+id/lbl_endDateTimeValue"
        android:layout_toRightOf="@id/dummyView"
        android:layout_alignBaseline="@id/lbl_endDateTime"
        android:layout_below="@id/lbl_startDateTimeValue"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_speedStats"
        android:layout_below="@id/lbl_endDateTime"
        android:text="@string/lbl_speedValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
    <TextView android:id="@+id/lbl_speedStatsValue"
        android:layout_toRightOf="@id/dummyView"
        android:layout_alignBaseline="@id/lbl_speedStats"
        android:layout_below="@id/lbl_endDateTimeValue"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_altitudeValues"
        android:layout_below="@id/lbl_speedStats"
        android:text="@string/lbl_altitudeValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
    <TextView android:id="@+id/lbl_altitudeValuesValue"
        android:layout_toRightOf="@id/dummyView"
        android:layout_alignBaseline="@id/lbl_altitudeValues"
        android:layout_below="@id/lbl_speedStatsValue"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content" style="@style/LabelValue"/>

    <TextView android:id="@+id/lbl_timeDiffValues"
        android:layout_below="@id/lbl_altitudeValues"
        android:text="@string/lbl_timeDiffValues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_toLeftOf="@id/dummyView" style="@style/Label"/>
    <TextView android:id="@+id/lbl_timeDiffValuesValue"
        android:layout_toRightOf="@id/dummyView"
        android:layout_alignBaseline="@id/lbl_timeDiffValues"
        android:layout_below="@id/lbl_altitudeValuesValue"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content" style="@style/LabelValue"/>

</RelativeLayout>